@@ -21726,7 +21726,7 @@
 		"GOTREDCARD": "Picked up a red keycard.",
 		"GOTBLUESKUL": "Picked up a blue skull key.",
 		"GOTYELWSKUL": "Picked up a yellow skull key.",
-		"GOTREDSKUL": "Picked up a red skull key.",
+		"GOTREDSKULL": "Picked up a red skull key.",
 		"GOTINVUL": "Invulnerability!",
 		"GOTBERSERK": "Berserk!",
 		"GOTINVIS": "Partial Invisibility",
