@@ -1,6 +1,7 @@
 Version 1.2.3
 -------------
-Fixed: no longer allow a state's action to be removed in non-extended patches.
+Fixed: no longer allow a state's action to be removed in non-extended patches. Thanks to Mechadon.
+Fixed: Boom configurations now properly refer to the red skullcard pickup string key as REDSKULL instead of REDSKUL. Thanks to EarthQuake.
 Changed: updated wxPython to 4.0.
 Changed: updated to Python 3.
 Changed: enabled high DPI support.
